--- a/src/package.json
+++ b/src/package.json
@@ -16,6 +16,7 @@
         "postcss": "^8.1.14",
         "resolve-url-loader": "^4.0.0",
         "sass": "^1.43.3",
-        "sass-loader": "^12.2.0"
+        "sass-loader": "^12.2.0",
+        "tailwindcss": "^2.2.17"
     }
 }
